chore(travis): Use node v 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 sudo: required
 
-language: node
+language: node_js
+node_js:
+  - 8
+
+cache:
+  directories:
+    - "node_modules"
 
 services:
   - docker
